--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   },
   "homepage": "https://github.com/HolyfcMoly/Food#readme",
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "babel-loader": "^9.1.2",
+    "core-js": "^3.30.0",
     "json-server": "^0.17.3",
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "accepts": "^1.3.8",
     "acorn": "^8.8.2",
     "acorn-jsx": "^5.3.2",
