--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "url": "https://github.com/HolyfcMoly/Food/issues"
   },
   "homepage": "https://github.com/HolyfcMoly/Food#readme",
+  "browsersList": [
+    "> 1%"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
